cargo-features = ["edition2021"]

[package]
name = "xxblake3"
authors = [ "rmw <i@rmw.link>" ]
edition = "2021"
version = "0.0.1"
license = "AGPL-3.0-or-later"
description= "encryption and decryption based on xxh3 and blake3"
repository = "https://github.com/rmw-lib/xxblake3"
documentation = "https://docs.rs/xxblake3"
readme = "README.md"

[dependencies]
blake3 = "0.3.8"
twox-hash = "1.6.0"

